# IssueSpotter-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_ai.py  test_vector_basic.py  test_vector_service.py
Documentation/: CLEANUP_SUMMARY.md  PHASE_3_SUMMARY.md  Phase-1.md  Phase-3-summary.md  VECTOR_SERVICE.md  Vector-service.md
app/: main.py
app/ai/: image_analyser.py  image_embedder.py  text_embedder.py  video_analyzer.py
app/api/v1/: dashboard.py  issues.py
app/config/: settings.py
app/db/: session.py
app/db/migrations/: env.py
app/models/: __init__.py  embedding.py  issue.py  moderation.py  types.py  user.py
app/pipelines/moderation/: __init__.py  classifier.py  decision.py  hitl.py  preprocessor.py  rules.py  runner.py
app/schemas/: __init__.py  issue.py
app/services/: issue_service.py  moderation_service.py  vector_service.py  webhook_service.py
app/utils/: enums.py
app/workers/: celery_app.py  moderation_worker.py
docker/: docker-compose.yml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_qdrant_integration.py
tests/unit/: __init__.py  test_ai_components.py  test_classifier.py  test_vector_logic.py  test_video_analyzer.py  test_webhook_service.py
